fix image size on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,6 +52,12 @@ footer {
     margin: 2rem auto;
 }
 
+img.hero {
+    width: calc(100% + 2rem);
+    margin: 0 0 0 -1rem;
+    float:unset;
+}
+
 @media screen and (min-width:768px) {
     body {
         margin:0 auto;
